# sg_housing

./: .gitattributes  .gitignore  README.md  home.py  pyproject.toml  sg_housing.ipynb.backup  sg_housing_ipybackup.py
.streamlit/: config.toml
pages/: flat_type_view.py
sg_housing/: __init__.py  home.py
src/lib/: calculations.py  map_utils.py
