[tool.poetry]
name = "sg-housing"
version = "0.1.0"
description = ""
authors = ["__stan__ <8445726+schanjr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sg_housing"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.13.0"
watchdog = "^2.1.9"
jupyter = "^1.0.0"
altair = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
