[tool.poetry]
name = "sg-housing"
version = "0.1.0"
description = ""
authors = ["__stan__ <8445726+schanjr@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "tools", from = "./tools" },
]
include = ["resale-flat-prices/2017-and-beyond-annotated.csv"]


[tool.poetry.dependencies]
python = "^3.9.10"
streamlit = "^1.13.0"
watchdog = "^2.1.9"
jupyter = "^1.0.0"
altair = "^4.2.0"
pydeck = "^0.7.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"
nest-asyncio = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
