[tool.poetry]
name = "sg-housing"
version = "0.1.0"
description = ""
authors = ["__stan__ <8445726+schanjr@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9.10"
streamlit = "^1.16.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"
nest-asyncio = "^1.5.6"
altair = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
